Renamed OpenAPI spec from arachne to astrolabe
