# gen/restapi/operations/copy_protected_entity_urlbuilder.go
@@ -42,7 +42,7 @@ func (o *CopyProtectedEntityURL) SetBasePath(bp string) {
 func (o *CopyProtectedEntityURL) Build() (*url.URL, error) {
 	var _result url.URL
 
-	var _path = "/arachne/{service}"
+	var _path = "/astrolabe/{service}"
 
 	service := o.Service
 	if service != "" {
