# gen/restapi/operations/get_protected_entity_info_urlbuilder.go
@@ -41,7 +41,7 @@ func (o *GetProtectedEntityInfoURL) SetBasePath(bp string) {
 func (o *GetProtectedEntityInfoURL) Build() (*url.URL, error) {
 	var _result url.URL
 
-	var _path = "/arachne/{service}/{protectedEntityID}"
+	var _path = "/astrolabe/{service}/{protectedEntityID}"
 
 	protectedEntityID := o.ProtectedEntityID
 	if protectedEntityID != "" {
