# gen/restapi/operations/list_protected_entities.go
@@ -29,7 +29,7 @@ func NewListProtectedEntities(ctx *middleware.Context, handler ListProtectedEnti
 	return &ListProtectedEntities{Context: ctx, Handler: handler}
 }
 
-/*ListProtectedEntities swagger:route GET /arachne/{service} listProtectedEntities
+/*ListProtectedEntities swagger:route GET /astrolabe/{service} listProtectedEntities
 
 List protected entities for the service.  Results will be returned in canonical ID order (string sorted).  Fewer results may be returned than expected, the ProtectedEntityList has a field specifying if the list has been truncated.
 
